refactor: 도커 헬시체크 반환 형식 수정